feat: :sparkles: my-section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <my-header></my-header>
+    <my-section></my-section>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </body>
 </html>
