feat: :sparkles: Footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </article>
         <my-nav></my-nav>
     </section>
-    
+    <my-footer></my-footer>
     <style>
         *{
             margin: 0;
